src/objects/Region_Pricing__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Region Pricing</relationshipLabel>
        <relationshipName>Region_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Base_Price__c</fullName>
        <label>Base Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Express_Multiplier__c</fullName>
        <label>Express Multiplier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing</label>
        <referenceTo>Pricing__c</referenceTo>
        <relationshipLabel>Region Pricing</relationshipLabel>
        <relationshipName>Region_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proofreading_Multiplier__c</fullName>
        <label>Proofreading Multiplier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HU</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>INT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Char_Price__c</fullName>
        <label>Source Char Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Word_Price__c</fullName>
        <label>Source Word Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Char_Price__c</fullName>
        <label>Target Char Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Word_Price__c</fullName>
        <label>Target Word Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Urgent_Multiplier__c</fullName>
        <label>Urgent Multiplier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Region Pricing</label>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Region Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Region Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>